<?xml version="1.0"?>
<package format="3">
  <name>pmb2_2dnav</name>
  <version>3.0.2</version>
  <description>PMB2-specific launch files needed to run
    navigation on the PMB2 robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!--<exec_depend>pal_navigation_cfg_pmb2</exec_depend>-->
  <!--<exec_depend>pmb2_laser_sensors</exec_depend>-->
  <exec_depend>pmb2_maps</exec_depend>
  <!--<exec_depend>pmb2_rgbd_sensors</exec_depend>-->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
