<?xml version="1.0"?>
<package format="2">
  <name>pmb2_5_2dnav</name>
  <version>0.9.8</version>
  <description>PMB2-specific launch files needed to run
    navigation on the PMB2 robot (overload).</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <replace>pmb2_2dnav</replace>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb2_2dnav</exec_depend>

</package>
