<?xml version="1.0"?>
<package format="2">
  <name>pmb2_5_2dnav</name>
  <version>0.9.15</version>
  <description>PMB2-specific launch files needed to run
    navigation on the PMB2 robot (overload).</description>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>
  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <replace>pmb2_2dnav</replace>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pmb2_2dnav</exec_depend>

</package>
