<?xml version="1.0"?>
<package format="3">
  <name>pmb2_laser_sensors</name>
  <version>4.0.5</version>
  <description>Launch files and scripts needed to bring up the ROS nodes of a PMB2 robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <license>Apache License 2.0</license>
  <author email="noel.jimenez@pal-robotics.com">Noel Jimenez</author>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Removed until https://github.com/uos/sick_tim/pull/101 is merged-->
  <exec_depend condition="$PAL_DISTRO > 0">sick_tim</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
