<?xml version="1.0"?>
<package>
  <name>pmb2_maps</name>
  <version>0.9.12</version>
  <description>PMB2-specific maps and launch files.</description>
  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
