<?xml version="1.0"?>
<package format="3">
  <name>pmb2_maps</name>
  <version>4.0.4</version>
  <description>PMB2-specific maps and launch files.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <license>Apache License 2.0</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
