<?xml version="1.0"?>
<package>
  <name>pmb2_navigation</name>
  <version>0.11.3</version>
  <description>PMB2 navigation metapackage</description>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pmb2_2dnav</run_depend>
  <run_depend>pmb2_maps</run_depend>
  <run_depend>pmb2_laser_sensors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
