<?xml version="1.0"?>
<package>
  <name>pmb2_rgbd_sensors</name>
  <version>0.11.0</version>
  <description>PMB2-specific RGBD sensors launch and config files.</description>
  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>
  <license>Modified BSD</license>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>openni2_launch</run_depend>
  <run_depend>pal-orbbec-openni2</run_depend>
  
</package>
